[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/bg_main.jpg" type="Texture" id=1]
[ext_resource path="res://assets/settings/settings_btn_language_en.png" type="Texture" id=2]
[ext_resource path="res://assets/settings/settings_btn_vibration_on.png" type="Texture" id=3]
[ext_resource path="res://assets/settings/settings_btn_back_en.png" type="Texture" id=4]
[ext_resource path="res://assets/settings/settings_btn_sound_on.png" type="Texture" id=5]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=6]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="tx_bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="btn_snd" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -134.0
margin_top = 108.0
margin_right = 134.0
margin_bottom = 370.0
focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="btn_vbr" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -233.0
margin_right = 134.0
margin_bottom = 29.0
focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="btn_lan" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -134.0
margin_top = -572.0
margin_right = 134.0
margin_bottom = -310.0
focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="btn_back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -249.0
margin_top = -205.0
margin_right = 249.0
margin_bottom = -97.0
focus_mode = 0
icon = ExtResource( 4 )
flat = true
